gnome-shell
BUILD_FAILED
--- ERROR LOG (Last 30 lines) ---
                 from ../src/calendar-server/gnome-shell-calendar-server.c:39:
/usr/include/libical-glib/i-cal-derived-property.h:555:17: note: 'i_cal_property_get_dtstart' declared here
  555 | ICalTime *      i_cal_property_get_dtstart      (const ICalProperty *self);
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~
../src/calendar-server/gnome-shell-calendar-server.c: In function 'get_ical_end_time':
../src/calendar-server/gnome-shell-calendar-server.c:199:32: error: passing argument 4 of 'get_time_from_property' from incompatible pointer type [-Wincompatible-pointer-types]
  199 |                                i_cal_property_get_dtend,
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~
      |                                |
      |                                ICalTime * (*)(const ICalProperty *)
../src/calendar-server/gnome-shell-calendar-server.c:119:39: note: expected 'ICalTime * (*)(ICalProperty *)' but argument is of type 'ICalTime * (*)(const ICalProperty *)'
  119 |                         ICalTime * (* get_prop_func) (ICalProperty *prop),
      |                         ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/libical-glib/i-cal-derived-property.h:535:17: note: 'i_cal_property_get_dtend' declared here
  535 | ICalTime *      i_cal_property_get_dtend        (const ICalProperty *self);
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~
../src/calendar-server/gnome-shell-calendar-server.c:207:36: error: passing argument 4 of 'get_time_from_property' from incompatible pointer type [-Wincompatible-pointer-types]
  207 |                                    i_cal_property_get_dtstart,
      |                                    ^~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                    |
      |                                    ICalTime * (*)(const ICalProperty *)
../src/calendar-server/gnome-shell-calendar-server.c:119:39: note: expected 'ICalTime * (*)(ICalProperty *)' but argument is of type 'ICalTime * (*)(const ICalProperty *)'
  119 |                         ICalTime * (* get_prop_func) (ICalProperty *prop),
      |                         ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/libical-glib/i-cal-derived-property.h:555:17: note: 'i_cal_property_get_dtstart' declared here
  555 | ICalTime *      i_cal_property_get_dtstart      (const ICalProperty *self);
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~
[159/290] Compiling C object src/calendar-server/gnome-shell-calendar-server.p/calendar-sources.c.o
[160/290] Compiling C object src/hotplug-sniffer/gnome-shell-hotplug-sniffer.p/shell-mime-sniffer.c.o
ninja: build stopped: subcommand failed.
